--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -1,7 +1,7 @@
-$baseFontFamily: Julee;
-@import url(http://fonts.googleapis.com/css?family=Julee);
+$baseFontFamily: Julius Sans One;
+@import url(http://fonts.googleapis.com/css?family=Julius+Sans+One);
 
-$btnPrimaryBackground: #049cdb;
+
 $navbarBackgroundHighlight: white;
 @import 'bootstrap';
 
