--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
 	</p>
 
 	<p>
-		<%= link_to "Sign Up Now" , "#", class: "btn btn-success btn-large"%>
+		<%= link_to "Sign Up Now" , "#", class: "btn btn-success btn-large"%><i class="icon-user"></i>
 	</p>
 
 
