--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,6 @@
-
+	<% if user_signed_in? %>
+	<h1>You are signed in!<h2>
+	<% else %>
 	<div class="hero-unit">
 	<h1>Welcome to One Month Rails!</h1>
 	<p>
@@ -6,10 +8,11 @@
 	</p>
 
 	<p>
-		<%= link_to "Sign Up Now" , "#", class: "btn btn-success btn-large"%><i class="icon-user"></i>
+		<%= link_to "Sign Up Now" , new_user_registration_path, class: "btn btn-success btn-large"%><i class="icon-user"></i>
 	</p>
 
 
 	<p style="color:red">Hooray</p>
 
 </div>
+<% end %>
