--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -5,9 +5,14 @@
 		  
 		  <%= @pin.description %>
 		</p>
+		<p>
+		  
+		  <%= @pin.user.name %>
+		</p>
+		<% if current_user == @pin.user %>
 		<%= link_to 'Edit', edit_pin_path(@pin) %> |
 		<%= link_to 'Back', pins_path %>
-	
+		<% end %>
 		</div>
 	</div>
 </div>
