--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -1,5 +1,5 @@
-$baseFontFamily: Julius Sans One;
-@import url(http://fonts.googleapis.com/css?family=Julius+Sans+One);
+$baseFontFamily: Raleway;
+@import url(http://fonts.googleapis.com/css?family=Raleway);
 
 
 $navbarBackgroundHighlight: white;
@@ -24,4 +24,32 @@ body {
 	a {
 		color: $gray;
 	}
+}
+
+/* Required for JQuery Masonry */
+
+.box {
+	margin:5px;
+	padding:5px;
+	font-size: 11px;
+	line-height: 1.4em;
+	float: left;
+	-webkit-border-radius:5px;
+	-moz-border-radius:5px;
+	border-radius:5px;
+	box-shadow: 1px 1px 10px #444;
+	width: 214px;
+}
+
+.box img {
+	display:block;
+	width: 100%;
+	-webkit-border-radius:5px;
+	-moz-border-radius:5px;
+	border-radius:5px;
+}
+
+.description {
+	margin: 10px 5px;
+	text-align: center;
 }
