--- a/app/views/pins/_pin.html.erb
+++ b/app/views/pins/_pin.html.erb
@@ -5,7 +5,7 @@
       </p>
       <p style="font-size:0.8em;">
       	<strong>
-      		Posted by <%= pin.user.name %>
+      		Posted by <%= link_to pin.user.name, pin.user %>
       	</strong>
       </p>
             <% if current_user == pin.user %>
