--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
 <div class="footer">
-	<small style="margin-left:1%;">
-			<%= link_to "One Month Rails" , "http://onemonthrails.com"%> by <%= link_to "Mattel Griffel" , "http://mattangriffel.com"%>
-			</small>
+	<small>
+			<%= link_to "A Project by Alex Bakula-Davis" , "http://alexbakuladavis.com"%> 
+	</small>
 </div>
