--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -2,7 +2,8 @@ $baseFontFamily: Raleway;
 @import url(http://fonts.googleapis.com/css?family=Raleway);
 
 
-$navbarBackgroundHighlight: white;
+$navbarBackgroundHighlight:#606566;
+$navbarLinkColor: #EEE;
 @import 'bootstrap';
 
 body {
@@ -15,8 +16,10 @@ body {
 .navbar-inner {
 	@include box-shadow(none !important);
 	border:0;
+
 }
 *****/
+
 
 .footer {
 	margin-top: 50px;
