--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
 	  <%= javascript_include_tag "application" %>
 	  <%= csrf_meta_tags %>
 	</head>
-	<body>
+	<body style="background:#493f3f;">
 		<%= render 'layouts/header' %>
 		<div class="container">
 			
