--- a/app/views/pins/_pin.html.erb
+++ b/app/views/pins/_pin.html.erb
@@ -1,4 +1,4 @@
- <div class="box">
+ <div class="box", style="background:#EEEEEE;">
       <%= link_to (image_tag pin.image (:medium)), pin %>
       <p class="description">
       	<%= pin.description %>
