Adjusting text color

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
 <div class="footer">
 	<small>
-			<%= link_to "A Project by Alex Bakula-Davis" , "http://alexbakuladavis.com"%> 
+			<%= link_to "A Project by Alex Bakula-Davis" , "http://about.me/alexbdavis"%> 
 	</small>
 </div>
