--- a/app/views/pages/_home.html.erb
+++ b/app/views/pages/_home.html.erb
@@ -7,11 +7,11 @@
 	<h1>Welcome to Finterest!</h1>
 		<br>
 		<p>
-			You've found a small project by <%= link_to "Alex Bakula-Davis'", "http://alexbakuladavis.com"%> 
+			You've found a small project by <%= link_to "Alex Bakula-Davis'", "http://about.me/alexbdavis"%> 
 		</p>
 
 		<p>
-			<%= link_to "Sign Up Now" , new_user_registration_path, class: "btn btn-success btn-large"%>
+			<%= link_to "Sign Up Now" , new_user_registration_path, class: "btn btn-primary btn-large"%>
 		</p>
 		
 </div>
