--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,7 +8,7 @@
   <%= f.input :password %>
   <%= f.input :password_confirmation %>
 
-  <div class="form-actions">
+  <div class="form-actions" style="background: #606566;">
   	<%= f.submit "Sign up" , class: "btn btn-primary" %>
   </div>
 <% end %>
