--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,9 +6,9 @@
 	  <%= javascript_include_tag "application" %>
 	  <%= csrf_meta_tags %>
 	</head>
-	<body style="background:#493f3f;">
+	<body style="background:#968e8e;">
 		<%= render 'layouts/header' %>
-		<div class="container">
+		<div class="container" style="color:#EEE;">
 			
 			<% flash.each do |name, msg| %>
 				<%= content_tag(:div, msg, class: "alert alert-#{name}") %>
