--- a/app/views/pages/about.html
+++ b/app/views/pages/about.html
@@ -1,7 +1,7 @@
 
-<h1>About</h1>
+<h1 style="color:#EEE;">About</h1>
 
-<p>
+<p style="color:#EEE;">
 	Finterest is a project I did while learning Ruby on Rails.  This is just a sample application.
 </p>
 
