Fixed pin description color

--- a/app/views/pins/_pin.html.erb
+++ b/app/views/pins/_pin.html.erb
@@ -1,9 +1,9 @@
  <div class="box", style="background:#EEEEEE;">
       <%= link_to (image_tag pin.image (:medium)), pin %>
-      <p class="description">
+      <p class="description" style="color:black;">
       	<%= pin.description %>
       </p>
-      <p style="font-size:0.8em;">
+      <p style="font-size:0.8em; color:black;">
       	<strong>
       		Posted by <%= link_to pin.user.name, pin.user %>
       	</strong>
